<resources>
    <string name="app_name">MobilePart</string>
    <string name="hello_bro_test">Мы выкупаем!</string>
    <string name="create_button_text">создать лот</string>
    <string name="my_losts_button_text">мои лоты</string>
    <string name="orders_button_text">Заказы</string>
    <string name="create_lot">Создать лот</string>
    <string name="hint_link_text">Ссылка на товар</string>
    <string name="hint_size_text">Размер</string>
    <string name="create_menu_logo">Собери свой лот</string>
    <string name="hint_cost_text">Цена</string>
    <string name="hint_color_text">Цвет</string>
    <string name="hint_name_text">Дайте название лоту</string>
    <string name="admin_orders_button_text">Заказы (admin)</string>
    <string name="edit_condition_text">Новое состояние</string>
    <string name="change_condition_button_text">Сменить состояние</string>
    <string-array name="conditions">
        <item>NEW</item>
        <item>CANCELED</item>
        <item>PAYED</item>
        <item>BOUGHT_IN_SHOP</item>
        <item>SENT</item>
        <item>IN_DELIVERY</item>
        <item>CLIENT_RECEIVED</item>
    </string-array>
</resources>